Implement legal reflective access to OpenJDK JDI internals by opening module.